edited html page

--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <main class="div-main">
-            <section class="section first">
-              <h1 class="first-section-heading">Learn to code by watching others</h1>
-              <p class="first-section-para">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-                but understanding how developers think is invaluable. </p>
-            </section>
-            <section class="section second">
-              <div class="second-section-heading"><b>Try it free 7 days</b> then $20/mo. thereafter</div>
-              <form class="form" method="post">
-                <input type="text" placeholder="First Name" class="first-name">
-                <p class="error" id="first-name-error">First Name cannot be empty</p>
-                <input type="text" placeholder="Last Name" class="last-name">
-                <p class="error" id="last-name-error">Last Name cannot be empty</p>
-                <input type="text" placeholder="Email Address" class="email">
-                <p class="error" id="email-error">Email cannot be empty</p>
-                <p class="error" id="email-second-error">Looks like this is not an email</p>
-                <input type="password" placeholder="Password" class="password">
-                <p class="error" id="password-error">Password cannot be empty</p>
-                <button class="form-btn">CLAIM YOUR FREE TRIAL</button>
-                <p class="terms">By clicking the button, you are agreeing to our <span style="color: hsl(0, 100%, 74%); font-weight: 700;">Terms and Services</span></p>
-              </form>
-            </section>
-        </main>
-        <script src="app.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Intro component with sign-up form</title>
+</head>
+
+<body>
+  <main class="div-main">
+    <section class="section first">
+      <h1 class="first-section-heading">Learn to code by watching others</h1>
+      <p class="first-section-para">See how experienced developers solve problems in real-time. Watching scripted
+        tutorials is great,
+        but understanding how developers think is invaluable. </p>
+    </section>
+    <section class="section second">
+      <div class="second-section-heading"><b>Try it free 7 days</b> then $20/mo. thereafter</div>
+      <form class="form" method="post">
+        <input type="text" placeholder="First Name" class="first-name">
+        <p class="error" id="first-name-error">First Name cannot be empty</p>
+        <input type="text" placeholder="Last Name" class="last-name">
+        <p class="error" id="last-name-error">Last Name cannot be empty</p>
+        <input type="text" placeholder="Email Address" class="email">
+        <p class="error" id="email-error">Email cannot be empty</p>
+        <p class="error" id="email-second-error">Looks like this is not an email</p>
+        <input type="password" placeholder="Password" class="password">
+        <p class="error" id="password-error">Password cannot be empty</p>
+        <button class="form-btn">CLAIM YOUR FREE TRIAL</button>
+        <p class="terms">By clicking the button, you are agreeing to our <span
+            style="color: hsl(0, 100%, 74%); font-weight: 700;">Terms and Services</span></p>
+      </form>
+    </section>
+  </main>
+  <script src="app.js"></script>
+</body>
+
 </html>
